@@ -190,8 +190,13 @@ public final class DominoIIOPPlugin
 			{
 				try
 				{
-					if(sChannel != null)
+					if(sChannel != null) 
+                                        {
+                                                if (sChannel.socket() != null)
+                                                        sChannel.socket().close();
 						sChannel.close();
+                                                sChannel = null;
+                                        }
 				}
 				catch(IOException e) { }
 			}
