@@ -191,7 +191,12 @@ public final class LdapPlugin
                         {
                                 // close the socket channel
                                 if (sChannel != null)
+                                {
+                                        if (sChannel.socket() != null)
+                                                sChannel.socket().close();
                                         sChannel.close();
+                                        sChannel = null;
+                                }
                         }
                         catch(IOException e) { }
                 }
