@@ -180,7 +180,12 @@ public final class Pop3Plugin
 				try
 				{
                                         if(sChannel != null)
+                                        {
+                                                if (sChannel.socket() != null)
+                                                        sChannel.socket().close();
                                                 sChannel.close();
+                                                sChannel = null;
+                                        }
 				}
 				catch(IOException e) { }
 			}
