@@ -236,7 +236,12 @@ final class CitrixMonitor
 				try
 				{
                                         if(sChannel != null)
+                                        {
+                                                if (sChannel.socket() != null)
+                                                        sChannel.socket().close();
                                                 sChannel.close();
+                                                sChannel = null;
+                                        }
 				}
 				catch(IOException e) { }
 			}
