@@ -306,8 +306,13 @@ final class HttpMonitor
 					try
 					{
 						// Close the socket
-                                        if(sChannel != null)
-                                                sChannel.close();
+                                                if(sChannel != null)
+                                                {
+                                                        if (sChannel.socket() != null)
+                                                                sChannel.socket().close();
+                                                        sChannel.close();
+                                                        sChannel = null;
+                                                }
 					}
 					catch(IOException e) 
 					{ 
