@@ -269,7 +269,12 @@ final class ImapMonitor
 				{
 					// Close the socket
                                         if(sChannel != null)
+                                        {
+                                                if (sChannel.socket() != null)
+                                                        sChannel.socket().close();
                                                 sChannel.close();
+                                                sChannel = null;
+                                        }
 				}
 				catch(IOException e) 
 				{ 
