@@ -241,7 +241,12 @@ final class Pop3Monitor
 				{
 					// Close the socket
                                         if(sChannel != null)
+                                        {
+                                                if (sChannel.socket() != null)
+                                                        sChannel.socket().close();
                                                 sChannel.close();
+                                                sChannel = null;
+                                        }
 
 				}
 				catch(IOException e) 
