@@ -414,7 +414,12 @@ final class SmtpMonitor
 				{
 					// Close the socket
                                         if(sChannel != null)
+                                        {
+                                                if (sChannel.socket() != null)
+                                                        sChannel.socket().close();
                                                 sChannel.close();
+                                                sChannel = null;
+                                        }
 				}
 				catch(IOException e) 
 				{ 
